[package]
name = "gico"
version = "0.1.0"
authors = ["Santo Cariotti <santo@dcariotti.me>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-service = "1.0.5"

tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = { version = "0.5.1", features = ["with-uuid-0_8", "with-chrono-0_4"] }

slog = "2.4.1"
slog-term = "2.5.0"
slog-async = "2.4.0"

dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
regex = "1"
md-5 = "0.9.1"
hex = "0.4.3"

git2 = "0.13"
